refactor(frontend):replace to monorepo

--- a/frontend/providers/applaunchpad/package.json
+++ b/frontend/providers/applaunchpad/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kf-web",
+  "name": "applaunchpad",
   "private": true,
   "version": "0.1.0",
   "scripts": {
@@ -43,7 +43,7 @@
     "react-markdown": "^8.0.4",
     "react-syntax-highlighter": "^15.5.0",
     "sass": "^1.58.3",
-    "sealos-desktop-sdk": "^0.1.14",
+    "sealos-desktop-sdk": "workspace:*",
     "typescript": "4.9.5",
     "zustand": "^4.3.5"
   },
