--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -31,27 +31,19 @@ on:
       - ".github/workflows/frontend.yml"
       - "!**/*.md"
       - "!**/*.yaml"
-
 env:
   # Common versions
   GO_VERSION: "1.20"
   DEFAULT_OWNER: "labring"
 
 jobs:
-  image-build:
+  image-prebuild:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         module:
-          [
-            providers/adminer,
-            providers/applaunchpad,
-            providers/bytebase,
-            providers/imagehub,
-            providers/terminal,
-            providers/dbprovider,
-            providers/costcenter,
-            desktop,
+          [ 
+            deps
           ]
     steps:
       - name: Checkout
@@ -107,12 +99,99 @@ jobs:
       - name: Build And Push
         uses: docker/build-push-action@v4
         with:
-          context: ./frontend/${{ matrix.module }}
-          file: ./frontend/${{ matrix.module }}/Dockerfile
+          context: ./frontend
+          file: ./frontend/Dockerfile
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          target: deps
+          # Push if it's a push event or if push_image is true
+          push: false
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+
+  image-build:
+    needs:
+      - image-prebuild
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        module: [
+              desktop,
+              providers/adminer,
+              providers/applaunchpad,
+              providers/bytebase,
+              providers/imagehub,
+              providers/terminal,
+              providers/dbprovider,
+              providers/costcenter,
+
+            ]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Expose git commit data
+        uses: rlespinasse/git-commit-data-action@v1
+      - name: Check if tag
+        id: check_tag
+        run: |
+          if [[ "${{ github.ref }}" == refs/tags/* ]]; then
+            echo "isTag=true" >> "$GITHUB_OUTPUT"
+          else
+            echo "isTag=false" >> "$GITHUB_OUTPUT"
+          fi
+      - name: Prepare
+        id: prepare
+        run: |
+          bash ./scripts/resolve-tag-image.sh "${{ inputs.push_image }}" "${{ steps.check_tag.outputs.isTag }}"  "${{ inputs.push_image_tag }}"
+      - name: Extract module name
+        id: module_name
+        run: |
+          MODULE_NAME=$(basename ${{ matrix.module }})
+          echo "MODULE_NAME=${MODULE_NAME}" >> $GITHUB_ENV
+
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: |
+            ghcr.io/${{ github.repository_owner }}/sealos-${{ env.MODULE_NAME }}-frontend
+          tags: |
+            type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
+            type=raw,value=dev,enable=true
+            type=raw,value=${{ steps.prepare.outputs.tag_name }},enable=true
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to Github Container Hub
+        if: ${{ (github.event_name == 'push') ||(github.event_name == 'create') || (inputs.push_image == true) }}
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GH_PAT }}
+
+      - name: Build And Push
+        uses: docker/build-push-action@v4
+        with:
+          context: ./frontend
+          file: ./frontend/Dockerfile
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          build-args: |
+            name=${{ env.MODULE_NAME }}
+            path=${{ matrix.module }}
           # Push if it's a push event or if push_image is true
           push: ${{ (github.event_name == 'push') ||(github.event_name == 'create') || (inputs.push_image == true)  }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
   save-sealos:
     uses: ./.github/workflows/import-save-sealos.yml
   cluster-image-build:
