--- a/frontend/desktop/package.json
+++ b/frontend/desktop/package.json
@@ -16,7 +16,6 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@kubernetes/client-node": "^0.18.1",
-    "@prisma/client": "4.14.1",
     "@tanstack/react-query": "^4.29.3",
     "axios": "^1.3.5",
     "clsx": "^1.2.1",
@@ -43,7 +42,7 @@
     "react-draggable": "^4.4.5",
     "react-i18next": "^12.2.0",
     "sass": "^1.62.0",
-    "sealos-desktop-sdk": "^0.1.14",
+    "sealos-desktop-sdk": "workspace:*",
     "typescript": "5.0.4",
     "uuid": "^9.0.0",
     "zustand": "^4.3.7"
