--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,14 @@
   "private": true,
   "version": "0.1.0",
   "scripts": {
-    "format": "prettier --config \"./.prettierrc.js\" --write \"./*/*/src/**/*.{ts,tsx,scss}\""
+    "format": "prettier --config \"./.prettierrc.js\" --write \"./*/*/src/**/*.{ts,tsx,scss}\"",
+    "preinstall": "npx only-allow pnpm"
   },
+  "workspaces": [
+    "./packages/*",
+    "./providers/*",
+    "./desktop"
+  ],
   "devDependencies": {
     "prettier": "^2.8.4"
   }
