--- a/frontend/providers/adminer/package.json
+++ b/frontend/providers/adminer/package.json
@@ -17,7 +17,7 @@
     "js-yaml": "^4.1.0",
     "next": "13.4.5",
     "react": "18.2.0",
-    "sealos-desktop-sdk": "^0.1.14",
+    "sealos-desktop-sdk": "workspace:*",
     "typescript": "5.1.3",
     "zustand": "^4.3.8"
   },
