--- a/frontend/providers/bytebase/package.json
+++ b/frontend/providers/bytebase/package.json
@@ -20,7 +20,7 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sealos-desktop-sdk": "^0.1.11",
+    "sealos-desktop-sdk": "workspace:*",
     "typescript": "5.0.2",
     "zustand": "^4.1.5"
   },
