--- a/frontend/providers/costcenter/package.json
+++ b/frontend/providers/costcenter/package.json
@@ -1,45 +1,44 @@
 {
-  "name": "terminal",
+  "name": "costcenter",
   "version": "0.1.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "docker": "docker build . -t"
+    "lint": "next lint"
   },
   "dependencies": {
     "@chakra-ui/anatomy": "^2.1.1",
-    "@chakra-ui/react": "^2.6.1",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
+    "@chakra-ui/react": "^2.7.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@kubernetes/client-node": "0.18.0",
-    "@tanstack/query-sync-storage-persister": "^4.29.7",
-    "@tanstack/react-query": "^4.29.7",
-    "@tanstack/react-query-persist-client": "^4.29.7",
+    "@tanstack/query-sync-storage-persister": "^4.29.19",
+    "@tanstack/react-query": "^4.29.19",
+    "@tanstack/react-query-persist-client": "^4.29.19",
     "axios": "1.2.1",
     "clsx": "^1.2.1",
     "date-fns": "^2.30.0",
     "echarts": "^5.4.2",
     "echarts-for-react": "^3.0.2",
-    "framer-motion": "^10.9.1",
-    "i18next": "^22.4.15",
-    "immer": "^9.0.16",
+    "framer-motion": "^10.12.18",
+    "i18next": "^22.5.1",
+    "immer": "^9.0.21",
     "js-cookie": "^3.0.5",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "next": "13.1.6",
-    "next-i18next": "^13.2.2",
+    "next-i18next": "^13.3.0",
     "nprogress": "^0.2.0",
     "qrcode.react": "^3.1.0",
     "react": "18.2.0",
     "react-activation": "^0.12.4",
-    "react-day-picker": "^8.7.1",
+    "react-day-picker": "^8.8.0",
     "react-dom": "18.2.0",
-    "react-i18next": "^12.2.2",
-    "sealos-desktop-sdk": "^0.1.14",
-    "zustand": "^4.1.5"
+    "react-i18next": "^12.3.1",
+    "sealos-desktop-sdk": "workspace:*",
+    "zustand": "^4.3.9"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.3",
@@ -51,7 +50,7 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "prettier": "^2.8.8",
-    "sass": "^1.57.1",
+    "sass": "^1.63.6",
     "typescript": "4.9.5"
   }
 }
