--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -11,36 +11,10 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-
-# Install dependencies only when needed
-FROM node:current-alpine AS deps
-# Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
-RUN apk add --no-cache libc6-compat && npm install -g pnpm
-WORKDIR /app
-
-# Install dependencies based on the preferred package manager root workspace
-COPY pnpm-lock.yaml ./
-RUN \
-  [ -f pnpm-lock.yaml ] && pnpm fetch || \
-  (echo "Lockfile not found." && exit 1)
-
-# Rebuild the source code only when needed
-FROM node:current-alpine AS builder
-WORKDIR /app
-COPY --from=deps /app/node_modules ./node_modules
-COPY . .
-
-# Next.js collects completely anonymous telemetry data about general usage.
-# Learn more here: https://nextjs.org/telemetry
-# Uncomment the following line in case you want to disable telemetry during the build.
-ENV NEXT_TELEMETRY_DISABLED 1
-
-RUN npm install -g pnpm && pnpm install --offline --filter=desktop && pnpm lerna run build --scope=desktop 
-
-# Production image, copy all the files and run next
+# ARG name
+# ARG path
 FROM node:current-alpine AS runner
 WORKDIR /app
-
 ENV NODE_ENV production
 # Uncomment the following line in case you want to disable telemetry during runtime.
 ENV NEXT_TELEMETRY_DISABLED 1
@@ -52,21 +26,73 @@ RUN sed -i 's/https/http/' /etc/apk/repositories
 RUN apk add curl \
   && apk add ca-certificates \
   && update-ca-certificates
-
-# You only need to copy next.config.js if you are NOT using the default configuration
-# COPY --from=builder /app/desktop/next.config.js ./
-COPY --from=builder /app/desktop/public ./desktop/public
-COPY --from=builder /app/desktop/package.json ./package.json
-
-# Automatically leverage output traces to reduce image size
-# https://nextjs.org/docs/advanced-features/output-file-tracing
-COPY --from=builder --chown=nextjs:nodejs /app/desktop/.next/standalone ./
-COPY --from=builder --chown=nextjs:nodejs /app/desktop/.next/static ./desktop/.next/static
-
 USER nextjs
 
 EXPOSE 3000
 
 ENV PORT 3000
+# Install dependencies only when needed
+FROM node:current-alpine AS deps
 
-CMD ["node", "desktop/server.js"]
+# Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
+RUN apk add --no-cache libc6-compat && npm install -g pnpm
+WORKDIR /app
+
+# Install dependencies based on the preferred package manager root workspace
+COPY pnpm-lock.yaml package.json pnpm-workspace.yaml ./
+
+RUN \
+  [ -f pnpm-lock.yaml ] && pnpm fetch || \
+  (echo "Lockfile not found." && exit 1) 
+
+# COPY ./packages ./packages
+# RUN pnpm lerna run build --scope=$name
+# RUN pnpm -r --offline --filter=./packages/* install \
+# && pnpm -r --filter=./packages/* run build 
+
+
+
+# Rebuild the source code only when needed
+FROM node:current-alpine AS builder
+
+WORKDIR /app
+COPY --from=deps /app/node_modules ./node_modules
+# COPY --from=deps /app/packages ./packages
+# Next.js collects completely anonymous telemetry data about general usage.
+# Learn more here: https://nextjs.org/telemetry
+# Uncomment the following line in case you want to disable telemetry during the build.
+ENV NEXT_TELEMETRY_DISABLED 1
+
+RUN npm install -g pnpm
+
+
+
+# COPY ${path} ./${path}
+COPY . .
+RUN pnpm -r --offline --filter=./packages/* install \
+&& pnpm -r --filter=./packages/* run build 
+
+ARG name
+ARG path
+
+RUN \
+  [ -f $path/pnpm-lock.yaml ] && (pnpm --offline --filter=$name install && pnpm --filter=$name run build) || \
+  (echo "Lockfile not found." && exit 1) 
+
+
+# Production image, copy all the files and run next
+FROM runner
+
+ARG name
+ARG path
+# You only need to copy next.config.js if you are NOT using the default configuration
+# COPY --from=builder /app/desktop/next.config.js ./
+COPY --from=builder /app/$path/public ./$path/public
+COPY --from=builder --chown=nextjs:nodejs /app/$path/.next/standalone ./
+COPY --from=builder --chown=nextjs:nodejs /app/$path/.next/static ./$path/.next/static
+
+ENV launchpath=./${path}/server.js
+
+ENTRYPOINT ["sh","-c","node ${launchpath}"]
+
+
