--- a/frontend/providers/terminal/package.json
+++ b/frontend/providers/terminal/package.json
@@ -9,33 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.5.5",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
+    "@chakra-ui/react": "^2.7.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@kubernetes/client-node": "0.18.0",
-    "@tanstack/react-query": "^4.28.0",
+    "@tanstack/react-query": "^4.29.19",
     "axios": "1.2.1",
     "clsx": "^1.2.1",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
-    "framer-motion": "^10.11.6",
-    "immer": "^9.0.16",
+    "framer-motion": "^10.12.18",
+    "immer": "^9.0.21",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "nanoid": "^4.0.2",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sealos-desktop-sdk": "^0.1.11",
+    "sealos-desktop-sdk": "workspace:*",
     "typescript": "5.0.2",
-    "zustand": "^4.1.5"
+    "zustand": "^4.3.9"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.191",
     "@types/js-yaml": "^4.0.5",
+    "@types/lodash": "^4.14.195",
     "@types/node": "18.15.5",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "sass": "^1.57.1"
+    "sass": "^1.63.6"
   }
 }
