--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -106,7 +106,6 @@ jobs:
               providers/terminal,
               providers/dbprovider,
               providers/costcenter,
-
             ]
     steps:
       - name: Checkout
@@ -164,8 +163,8 @@ jobs:
         with:
           context: ./frontend
           file: ./frontend/Dockerfile
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+#           cache-from: type=gha
+#           cache-to: type=gha,mode=max
           build-args: |
             name=${{ env.MODULE_NAME }}
             path=${{ matrix.module }}
