fix(object-storage): switch kc

--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -64,7 +64,7 @@ jobs:
             providers/terminal,
             providers/dbprovider,
             providers/costcenter,
-            #            providers/objectstorage,
+            providers/objectstorage,
             desktop,
           ]
     steps:
