--- a/frontend/providers/objectstorage/package.json
+++ b/frontend/providers/objectstorage/package.json
@@ -27,6 +27,7 @@
     "framer-motion": "^10.16.4",
     "fuse.js": "^7.0.0",
     "i18next": "^22.5.1",
+    "immer": "^10.0.3",
     "js-yaml": "^4.1.0",
     "jszip": "^3.10.1",
     "lodash": "^4.17.21",
